# model_validation

./: .gitignore  IV_Analysis_Report.md  IV_Summary.csv  README.md  langgraph.json  main.py  pyproject.toml  start.bat  test_data.csv
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
data/input/: base_by_custfac_w_waterfall_bad_20250923_v4.parquet
data/output/: report.md
prd/: implementation_plan.md  model_validation_requiement.md  task.md
source/: agent.demo_flow.ipynb  agent_manager.py  api.py  chat_manager.py  data_handling.py  flow_manager.py  main.py  ochestration_agent.py  test_file_tools.py  tools.py
source/iv/: iv_report.py  test_iv_report.py
source/play_ground/: agent.demo_flow.ipynb  langchain_demo.ipynb  llama-index_rag_demo.ipynb
source/reports/: iv_report.py
source/test/: test_api_query_iv.py  test_data_handling_tools.py  test_file_tools.py  test_iv_engine.py
source/test/test_output/: YNTB_features_IV.csv
source/tools/: __init__.py  data_handling.py  iv_engine.py  tools.py
source/workflow/: validation_workflow.py
