[project]
name = "incubation"
version = "0.1.0"
description = "..."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "flask>=3.1.2",
    "fastapi>=0.115.6",
    "uvicorn>=0.32.1",
    "python-multipart>=0.0.17",
    "langchain-model-profiles>=0.0.5",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langchain-ollama>=1.0.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "streamlit>=1.51.0",
    "langchain>=1.1.0",
    "langgraph-cli>=0.1.0",
    "pytest>=9.0.2",
    "python-multipart>=0.0.20",
    "llama-index-readers-file==0.2.1",
    #align with llama-index core 0.11.x
    "llama-index-embeddings-huggingface>=0.3.0,<0.4.0",
    "llama-index-llms-ollama>=0.3.0,<0.4.0",
    #llama-index 0.11.22 requires openai llm plugin >=0.2.10,<0.3.0
    "llama-index-llms-openai>=0.2.10,<0.3.0",
    "sentence-transformers==3.0.1",
    "python-dotenv==1.0.1",
    "llama-index>=0.11.22",
]
